@@ -1,3 +1,11 @@
+2000-02-22  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Inst/CGS4.pm (start_msg_sys): Use ORACDR_TMP
+
+	* Inst/IRCAM.pm (start_msg_sys): Use ORACDR_TMP
+
+	* Inst/SCUBA.pm (start_msg_sys): Use ORACDR_TMP
+
 2000-01-31  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Inst/CGS4.pm (start_msg_sys): Use ORAC_DATA_OUT for ADAM_USER
